--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <title>Hello Coursera !</title>
 </head>
 <body>
-    <h1> Hello Coursera ! </h1>\
-    m.b.b.d 
+    <h1> Hello Coursera ! </h1>
+    <h2> m.b.b.d </h2> 
 </body>
 </html>
