--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello Coursera !</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Coursera is cool !</title>
 </head>
 <body>
-    <h1> Hello Coursera ! its a great course !  </h1>
+    <h1> This is a test </h1>
+    <div> Rashmin Softwares </div>
+    <span class="c1"> Rash Rash</span>
+    <span> Hash HAsh<div> Rash Rash
+         </div></span>
+
+    <div class="c1"> Rashmin </div>
+    <span> Hashini </span>
+
+ <ol id="rr">
+<li id="list1">One </li>
+<li>One </li>
+<li>One </li>
+<li class="c1">One </li>
+    <ol> 
+        <li>One </li>
+<li>One </li>
+        <li>One </li>
+<li>One </li>
+    </ol>
+</ol>
+<br>
+
+<div id="box"> 
+    <div id="content"> 
+
+        <span id="cont"> This isads  asda sd </span>
+        My Name is rasdas safassf asfasf saf safsa fsa f asfsa f sa fsa f as fa s 
+    </div>
+</div>
+
+<br>
+
+<br>
+<div>
+
+</div>
+<br>
+
+<diV id="div1"> 
+    <p id="one"> bwdc</p>
+    <p id="two"> deced</p>
+    <p id="three"> edced</p>
+    <p id="four">dec </p>
+
+
+</diV>
+
+
+<h1 id="h1"> MEDIA QUARIES !</h1>
+<p id="p1">MEDIA </p>
+<p id="p2">QUARIES </p>
+
+
 </body>
 </html>
