--- a/module2-solution/1/index.html
+++ b/module2-solution/1/index.html
@@ -11,7 +11,7 @@
 <body>
 	<h1>Our Menu</h1>
 	<div class="row">
-	<div class="container col-lg-4">
+	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
 		<div id="chicken">
 			Chicken
@@ -21,7 +21,7 @@
 		</p>
 		</section>
 	</div>
-	<div class="container col-lg-4">
+	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
 		<div id="beef">
 			Beef
@@ -31,7 +31,7 @@
 		</p>
 		</section>
 	</div>
-	<div class="container col-lg-4">
+	<div class="container col-lg-4 col-md-12 col-sm-12">
 		<section>
 		<div id="sushi">
 			Sushi
