--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -12,13 +12,54 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Boostrap Starter Page</title>
+    <title>Assignment Solution For Module 3 !</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 <body>
+    <header id="header1">
+            <nav class="navbar navbar-default">
+                    <div id="xx" class="container">
+                      <!-- Brand and toggle get grouped for better mobile display -->
+                      <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="index.html"><p id="brand-name">Food, LLC</p></a>
+                      </div>
+                      <!-- Collect the nav links, forms, and other content for toggling -->
+                      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right visible-xs">
+                                <li class="menu_item"><a href="#">Chicken</a></li>
+                                <li class="menu_item"><a href="#">Beef</a></li>
+                                <li class="menu_item"><a href="#">Suchi</a></li>
+                          </li>
+                        </ul>
+                      </div><!-- /.navbar-collapse -->
+                    </div><!-- /.container-fluid -->
+                  </nav>
+    </header>
 
-  <h1>Hello Coursera!</h1>
+<h3 class="text-center">Our Menu</h3>
+<br>
+<div class="container" >
+    <div class="row">
+    <div class=" text-center col-xs-12" id="ccc">
+            <p class="font-weight-bold" id="pp">Chicken</p>
+            <br>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing 
+            elit. Aenean commodo ligula eget dolor. Aenean massa.
+             Cum sociis natoque penatibus et magnis dis parturi
+             Lorem ipsum dolor sit amet, consectetuer adipiscing 
+            
+    </div>
+</div>
+</div>
+
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
