--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -47,7 +47,25 @@
 <br>
 <div class="container" >
     <div class="row">
-    <div class=" text-center col-xs-12" id="ccc">
+    <div class=" text-center col-xs-4 ccc">
+            <p class="font-weight-bold" id="pp">Chicken</p>
+            <br>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing 
+            elit. Aenean commodo ligula eget dolor. Aenean massa.
+             Cum sociis natoque penatibus et magnis dis parturi
+             Lorem ipsum dolor sit amet, consectetuer adipiscing 
+            
+    </div>
+    <div class=" text-center col-xs-4 ccc">
+            <p class="font-weight-bold" id="pp">Chicken</p>
+            <br>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing 
+            elit. Aenean commodo ligula eget dolor. Aenean massa.
+             Cum sociis natoque penatibus et magnis dis parturi
+             Lorem ipsum dolor sit amet, consectetuer adipiscing 
+            
+    </div>
+    <div class=" text-center col-xs-4 ccc" >
             <p class="font-weight-bold" id="pp">Chicken</p>
             <br>
             Lorem ipsum dolor sit amet, consectetuer adipiscing 
