--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1 id="test">Module 4 Solution Starter</h1>
   <h2>See the console for outputs !</h2>
 </body>
 </html>
